Fixed footer alignment

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,6 +5,7 @@
 
     .single-footer-widget{
         margin-bottom: 25px;
+        margin-left: 30px;
 
         h2{
             margin-bottom: 20px;
@@ -95,7 +96,7 @@
                         transition: all 0.5s;
                     }
 
-                    
+
                 }
             }
         }
@@ -206,7 +207,7 @@
                 }
             }
         }
-        
+
     }
 }
 
@@ -300,7 +301,7 @@
                         h4{
                             font-size: 15px;
                         }
-                    } 
+                    }
                 }
             }
 
@@ -321,7 +322,7 @@
                         font-size: 15px;
                     }
                 }
-            }  
+            }
         }
 
        .ps-5{
